1) Updated avatar URL.

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Eddie C. Davis
 description: PhD Research Assistant 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/eddie-c-davis//github.com/eddie-c-davis.png
+avatar: https://github.com/eddie-c-davis.png
 
 #
 # Flags below are optional
